--- a/src/assets/styles/markdown.scss
+++ b/src/assets/styles/markdown.scss
@@ -1,5 +1,5 @@
 
-@import '~highlight.js/styles/atom-one-dark-reasonable.css';
+// @import '~highlight.js/styles/atom-one-dark-reasonable.css';
 
 .detail, .comment-content {
   // 自定义markdown样式
